# retrieval-augmented-hallucination

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
cache/: filecache.py
core/file_reader/: chunker.py  reader.py
rag/: main.py
